--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>New Vision HTML CSS Template</title>
+    <title>Help Tibetan Nuns</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:wght@900&display=swap"
+        rel="stylesheet" />
     <!-- https://fonts.google.com/specimen/Open+Sans?selection.family=Open+Sans -->
-    <link href="css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
-    <link href="slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
-    <link href="slick/slick-theme.css" rel="stylesheet" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
-    <link href="css/templatemo-new-vision.css" rel="stylesheet" />
+    <link href="./css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
+    <link href="./slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
+    <link href="./slick/slick-theme.css" rel="stylesheet" />
+    <link href="./css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
+    <link href="./css/templatemo-new-vision.css" rel="stylesheet" />
     <!--
 
 New Vision Template
@@ -31,47 +32,90 @@ https://templatemo.com/tm-542-new-vision
             <div class="row">
                 <div class="col-12 tm-site-header-col">
                     <div class="tm-site-header-left">
-                        <i class="far fa-2x fa-eye tm-site-icon"></i>
-                        <h1 class="tm-site-name">New Vision</h1>
+                        <h1 class="tm-site-name">Help Tibetan Nuns, Inc.</h1>
+                        <div role="doc-subtitle" style="font-size:1.5rem; text-align: center; color: var(--reg-text)">
+                            Supporting Tibetan
+                            Buddhist Nuns of the
+                            Himalayan Region</div>
                     </div>
-                    <div class="tm-site-header-right tm-menu-container-outer">
 
-                        <!--Navbar-->
-                        <nav class="navbar navbar-expand-lg">
+                    <!--Navbar-->
+                    <nav class="navbar navbar-expand-lg">
 
-                            <!-- Collapse button -->
-                            <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
-                                data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
-                                aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
-                                        class="fas fa-bars fa-1x"></i></span></button>
+                        <!-- Collapse Button -->
+                        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"
+                            aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
+                                    class="fas fa-bars fa-1x"></i></span></button>
 
-                            <!-- Collapsible content -->
-                            <div class="collapse navbar-collapse tm-nav" id="navbarSupportedContent1">
+                        <!-- Collapsible Content -->
+                        <div class="collapse navbar-collapse tm-nav" id="navbarSupportedContent1"
+                            style="justify-content: center;">
 
-                                <!-- Links -->
-                                <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item active">
-                                        <a class="nav-link tm-nav-link" href="#">Home <span
-                                                class="sr-only">(current)</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link tm-nav-link" href="company.html">Our Company</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link tm-nav-link" href="services.html">Services</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
-                                    </li>
-                                </ul>
-                                <!-- Links -->
+                            <!-- Links -->
+                            <ul class="nav nav-tabs">
+                                <li class="nav-item">
+                                    <a class="nav-link active tm-nav-link" href="#">Home</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
+                                        role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./our-story.html">Our Story</a>
+                                        <a class="dropdown-item" href="./board.html">Our Board</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
+                                        href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                        Nunneries
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./nunneries/thrangu.html">
+                                            Thrangu Kong Jo Sherab Ling
+                                        </a>
+                                        <a class="dropdown-item" href="./nunneries/tilokpur.html">
+                                            Tilokpur
+                                        </a>
+                                        <a class="dropdown-item" href="./nunneries/palchen-chosling-lachi.html">
+                                            Palchen Chosling Lachi
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
+                                        href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                        How To Help
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./help/sponsor.html">
+                                            Sponsoring Nuns
+                                        </a>
+                                        <a class="dropdown-item" href="./help/call-to-action.html">
+                                            Call to Action
+                                        </a>
 
-                            </div>
-                            <!-- Collapsible content -->
+                                    </div>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
+                                        href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                        Blog
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="./blog.html">
+                                            Blog
+                                        </a>
+                                        <a class="dropdown-item" href="./gallery.html">
+                                            Gallery
+                                        </a>
 
-                        </nav>
-                        <!--/.Navbar-->
-                    </div>
+                                    </div>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </nav>
                 </div>
             </div>
         </div>
