--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -210,97 +210,44 @@ https://templatemo.com/tm-542-new-vision
                         </div>
                     </article>
                 </div>
-
-                <div class="row tm-welcome-row-2">
-                    <div class="col-lg-4 tm-dotted-box-container">
-                        <article class="tm-dotted-box">
-                            <i class="fas fa-3x fa-binoculars tm-article-icon"></i>
-                            <h3 class="tm-article-title">Template Usage</h3>
-                            <p class="tm-article-text">You can feel free to edit and use New Vision template for your
-                                commercial websites. Title color is #333</p>
-                            <a class="tm-btn tm-btn-rounded tm-article-link" href="#">More Details</a>
-                        </article>
-                    </div>
-                    <div class="col-lg-4 tm-dotted-box-container">
-                        <article class="tm-dotted-box">
-                            <i class="fas fa-3x fa-microscope tm-article-icon"></i>
-                            <h3 class="tm-article-title">New Vision</h3>
-                            <p class="tm-article-text"><a rel="nofollow" target="_parent"
-                                    href="https://templatemo.com/tm-542-new-vision">New Vision</a> comes with 4
-                                different HTML pages and provided free of charge by TemplateMo. You can add more pages
-                                if you need. Text color is #666</p>
-                        </article>
-                    </div>
-                    <div class="col-lg-4 tm-dotted-box-container">
-                        <article class="tm-dotted-box">
-                            <i class="fas fa-3x fa-glasses tm-article-icon"></i>
-                            <h3 class="tm-article-title">Download Sites</h3>
-                            <p class="tm-article-text">Do not re-distribute our template ZIP file on your website. Or
-                                contact us first. Button color is #C99</p>
-                            <a class="tm-btn tm-article-link" href="#">Read More...</a>
-                        </article>
-                    </div>
-                </div>
             </section>
 
-            <!-- Featured -->
-            <section class="tm-featured">
+            <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
+                        <h2 class="tm-section-header tm-header-floating">About Our Company</h2>
                     </div>
                 </div>
 
-                <!-- Carousel -->
-                <div class="grid tm-carousel">
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-01.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-02.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Top</span> CSS Theme</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-03.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-04.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Great</span> Web Theme</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-05.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Collection</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-06.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Max</span> CSS Layout</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-07.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Layout</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-08.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> CSS Template</i></h4>
-                        </figcaption>
-                    </figure>
+                <div class="row tm-welcome-row">
+                    <div class="tm-about">
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
+                            <div>
+                                <p><a rel="nofollow" target="_parent"
+                                        href="https://templatemo.com/tm-542-new-vision">New Vision HTML Template</a>
+                                    is provided by TemplateMo for 100% free of charge. Vestibulum consectetur urna
+                                    augue, in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo.
+                                    Integer tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
+                            <div>
+                                <p>Curabitur et viverra purus, in ornare sem. Donec eu imperdiet felis, sed interdum
+                                    leo. Mauris nisl mi, bibendum eu venenatis at, condimentum et dui. Proin mi
+                                    enim, dapibus at metus semper, hendrerit faucibus nisi.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fas fa-5x fa-fire-alt tm-about-icon"></i>
+                            <div>
+                                <p>Duis accumsan dolor feugiat dapibus ultrices. Vestibulum consectetur urna augue,
+                                    in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer
+                                    tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
