--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -162,7 +162,7 @@ https://templatemo.com/tm-542-new-vision
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-03.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/nuns-with-books.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2017</h3>
@@ -173,7 +173,7 @@ https://templatemo.com/tm-542-new-vision
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-04.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/Ralang-Sikkim-Nuns.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2018</h3>
@@ -185,7 +185,7 @@ https://templatemo.com/tm-542-new-vision
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-03.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2018</h3>
@@ -198,7 +198,7 @@ https://templatemo.com/tm-542-new-vision
                         </div>
                     </article>
                     <article class="col-lg-6 tm-media">
-                        <img src="img/img-3x2-04.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                        <img src="media/nuns-on-steps.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
                         <div class="tm-media-body">
                             <a href="#" class="tm-article-link">
                                 <h3 class="tm-article-title text-uppercase">2019</h3>
