--- a/modified/our-story.html
+++ b/modified/our-story.html
@@ -131,7 +131,7 @@ https://templatemo.com/tm-542-new-vision
                 </div>
 
                 <div class="row tm-welcome-row" style="margin-top:60px;">
-                    <article class="col-lg-6 tm-media">
+                    <article class="col-lg-6 tm-media-img-card tm-img-card">
                         <img src="media/MedicalCenter.png" alt="Welcome image" class="img-fluid tm-media-img" />
 
                         <!--  class="tm-media-body" -->
@@ -144,7 +144,7 @@ https://templatemo.com/tm-542-new-vision
                             </p>
                         </div>
                     </article>
-                    <article class="col-lg-6 tm-media">
+                    <article class="col-lg-6 tm-media-img-card">
                         <img src="media/pool.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                         <!--  class="tm-media-body" -->
@@ -159,7 +159,7 @@ https://templatemo.com/tm-542-new-vision
                             </p>
                         </div>
                     </article>
-                    <article class="col-lg-6 tm-media">
+                    <article class="col-lg-6 tm-media-img-card">
                         <img src="media/nuns-with-books.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                         <!-- class="tm-media-body" -->
@@ -172,7 +172,7 @@ https://templatemo.com/tm-542-new-vision
                             </p>
                         </div>
                     </article>
-                    <article class="col-lg-6 tm-media">
+                    <article class="col-lg-6 tm-media-img-card">
                         <img src="media/Ralang-Sikkim-Nuns.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                         <!-- class="tm-media-body" -->
@@ -186,7 +186,7 @@ https://templatemo.com/tm-542-new-vision
                             </p>
                         </div>
                     </article>
-                    <article class="col-lg-6 tm-media">
+                    <article class="col-lg-6 tm-media-img-card">
                         <img src="media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                         <!-- class="tm-media-body" -->
@@ -201,7 +201,7 @@ https://templatemo.com/tm-542-new-vision
                             </p>
                         </div>
                     </article>
-                    <article class="col-lg-6 tm-media">
+                    <article class="col-lg-6 tm-media-img-card">
                         <img src="media/nuns-on-steps.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                         <!-- class="tm-media-body" -->
