--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12">
-                <div class="tm-main-bg"></div>
+                <img src="../media/many-nuns-on-steps.jpeg" />
             </div>
         </div>
 
