--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12">
-                <img src="../media/many-nuns-on-steps.jpeg" />
+                <img src="../media/many-nuns-on-steps.jpeg" alt="Nuns on the steps of Thrangu Nunnery" />
             </div>
         </div>
 
