--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -130,7 +130,7 @@ https://templatemo.com/tm-542-new-vision
         </div>
 
         <figure class="hero">
-            <img src="../media/board.jpg" alt="picture of our board members">
+            <img src="../media/Letter_KKRinpoche_Seal.png" alt="picture of our board members">
             <figcaption>
                 HTN board members from left to right: Amy Schwarz, Lama Karma Drodhul, Amy McCracken, and Palma
                 Puzzuoli.
