--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -158,10 +158,10 @@ https://templatemo.com/tm-542-new-vision
         </div>
     </div>
 
-    <script src=".js/jquery-3.4.1.min.js"></script>
-    <script src=".slick/slick.min.js"></script>
-    <script src=".js/bootstrap.min.js"></script>
-    <script src=".js/templatemo-script.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../slick/slick.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/templatemo-script.js"></script>
 </body>
 
 </html>
