--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -165,10 +165,12 @@ https://templatemo.com/tm-542-new-vision
             </div>
         </div>
 
-        <div class="video-wrapper" style="max-width: 850px;">
-            <iframe src="https://www.youtube.com/embed/buThtYhaW1Q" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+        <div style="display: flex; justify-content: center;">
+            <div class="video-wrapper" style="max-width: 850px; flex-grow: 1;">
+                <iframe src="https://www.youtube.com/embed/buThtYhaW1Q" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
