--- a/modified/misc/gallery.html
+++ b/modified/misc/gallery.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:wght@900&display=swap"
         rel="stylesheet" />
     <!-- https://fonts.google.com/specimen/Open+Sans?selection.family=Open+Sans -->
-    <link href="./css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
-    <link href="./slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
-    <link href="./slick/slick-theme.css" rel="stylesheet" />
-    <link href="./css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
-    <link href="./css/templatemo-new-vision.css" rel="stylesheet" />
+    <link href="../css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
+    <link href="../slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
+    <link href="../slick/slick-theme.css" rel="stylesheet" />
+    <link href="../css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
+    <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
     <!--
 
 New Vision Template
@@ -55,14 +55,14 @@ https://templatemo.com/tm-542-new-vision
                             <!-- Links -->
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active tm-nav-link" href="#">Home</a>
+                                    <a class="nav-link active tm-nav-link" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
                                         role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./our-story.html">Our Story</a>
-                                        <a class="dropdown-item" href="./board.html">Our Board</a>
+                                        <a class="dropdown-item" href="../our-story.html">Our Story</a>
+                                        <a class="dropdown-item" href="../board.html">Our Board</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -71,13 +71,13 @@ https://templatemo.com/tm-542-new-vision
                                         Nunneries
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./nunneries/thrangu.html">
+                                        <a class="dropdown-item" href="../nunneries/thrangu.html">
                                             Thrangu Kong Jo Sherab Ling
                                         </a>
-                                        <a class="dropdown-item" href="./nunneries/tilokpur.html">
+                                        <a class="dropdown-item" href="../nunneries/tilokpur.html">
                                             Tilokpur
                                         </a>
-                                        <a class="dropdown-item" href="./nunneries/palchen-chosling-lachi.html">
+                                        <a class="dropdown-item" href="../nunneries/palchen-chosling-lachi.html">
                                             Palchen Chosling Lachi
                                         </a>
                                     </div>
@@ -88,10 +88,10 @@ https://templatemo.com/tm-542-new-vision
                                         How To Help
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./help/sponsor.html">
+                                        <a class="dropdown-item" href="../help/sponsor.html">
                                             Sponsoring Nuns
                                         </a>
-                                        <a class="dropdown-item" href="./help/call-to-action.html">
+                                        <a class="dropdown-item" href="../help/call-to-action.html">
                                             Call to Action
                                         </a>
 
@@ -103,13 +103,13 @@ https://templatemo.com/tm-542-new-vision
                                         Misc
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./blog.html">
+                                        <a class="dropdown-item" href="../misc/blog.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="./gallery.html">
+                                        <a class="dropdown-item" href="../misc/gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="./events.html">
+                                        <a class="dropdown-item" href="../misc/events.html">
                                             Events
                                         </a>
 
@@ -327,10 +327,10 @@ https://templatemo.com/tm-542-new-vision
 
         </main>
     </div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="slick/slick.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../slick/slick.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/templatemo-script.js"></script>
 </body>
 
 </html>
