--- a/modified/index.html
+++ b/modified/index.html
@@ -103,13 +103,13 @@ https://templatemo.com/tm-542-new-vision
                                         Misc
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./blog.html">
+                                        <a class="dropdown-item" href="./misc/blog.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="./gallery.html">
+                                        <a class="dropdown-item" href="./misc/gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="./events.html">
+                                        <a class="dropdown-item" href="./misc/events.html">
                                             Events
                                         </a>
 
