--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -103,15 +103,16 @@ https://templatemo.com/tm-542-new-vision
                                         Misc
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="../blog.html">
+                                        <a class="dropdown-item" href="../misc/blog.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="../gallery.html">
+                                        <a class="dropdown-item" href="../misc/gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="../events.html">
+                                        <a class="dropdown-item" href="../misc/events.html">
                                             Events
                                         </a>
+
 
                                     </div>
                                 </li>
